# confiq

./: CHANGELOG.md  Cargo.toml  config.toml  config.yaml  readme.md  release.toml
examples/: basic.rs  toml.rs
src/: engine.rs  error.rs  lib.rs  schema.rs  types.rs
src/source/: env.rs  file.rs  mod.rs  remote.rs
