[package]
name = "confiq"
version = "0.1.1"
edition = "2021"
description = "A modern, type-safe configuration management library for Rust"
authors = ["Christian Brendlin <christian@brendlinonline.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrischtel/confiq"
documentation = "https://docs.rs/confiq"
readme = "README.md"
keywords = ["config", "configuration", "settings", "env", "yaml"]
categories = ["config", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "fs",
] }
async-trait = "0.1"
tracing = "0.1"
secrecy = "0.8"
notify = "6.0"
once_cell = "1.0"
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
hashicorp_vault = { version = "2", optional = true }
aws-config = { version = "1.0", optional = true }
aws-sdk-ssm = { version = "1.0", optional = true }
futures = "0.3.31"
tokio-stream = "0.1.17"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros"] }
tokio-test = "0.4"
test-case = "3.0"
pretty_assertions = "1.0"
tempfile = "3.0"
tracing-test = "0.2"

[features]
default = ["yaml", "env"]
# Format support
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
# Source types
env = []
remote = ["dep:reqwest"]
vault = ["dep:hashicorp_vault"]
aws = ["dep:aws-config", "dep:aws-sdk-ssm"]
# Additional features
hot-reload = []
all = ["yaml", "toml", "env", "remote", "vault", "aws", "hot-reload"]
